--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-expense-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@babel/register": "^7.22.15",
     "@react-oauth/google": "^0.11.1",
